# leetcode

./: .gitignore  CLAUDE.md  algorithms-cheatsheet.md  cheatsheet.md  gca_cheatsheet.md  problems.md  pyproject.toml
cheatsheets/: arrays.md  binary-search.md  binary-tree.md  dynamic-programming.md  graph.md  hash-maps.md  heaps.md  matrices.md
interview-prep/: README.md  behavioral-questions.md  devops-questions.md  git-questions.md  introduction.md  javascript-questions.md  programming-questions.md  python-questions.md  questions-for-interviewers.md  sql-questions.md  technical_case_interview.md
interview-prep/altimetrik/: altimetrik.md  client-interview.md
interview-prep/aws/: ec2.md  ecs.md  iam.md  lambda.md  s3.md  vpc.md
interview-prep/behavioral/: agentic-development.md  behavioral.md  leadership.md  mentoring.md  (+1 more)
software-estimation/: chapter-20.md  chapter-22.md  chapter-23.md  contents.md  part-1.md  part-2.md  part-3.md  questions-part-1.md  questions-part-2.md
tests/: test_count_nice_subarrays.py  test_data_transformations.py  test_diagonal_traverse.py  test_distinct_colors.py  test_find_and_replace_pattern.py  test_find_occurrences.py  test_four_sum_count.py  test_generate_spiral_matrix.py  test_isomorphic_strings.py  test_k_pairs.py  test_longest_alternating_subarray.py  test_longest_consecutive.py  test_longest_palindrome.py  test_num_pairs_divisible_by_60.py  test_product_except_self.py  test_reorder_doubled.py  test_rotate_array.py  test_rotate_matrix.py  test_spiral_order.py  test_three_sum.py  test_transformations.py
(+302 files in other folders)
